[package]
name = "adi-tasks"
description = "The adi task tree: a persistent tree of work items (one JSON document under ~/.adi/mono/tasks) with a minimal stored status and a computed effective status. Pure library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

# Task mutations publish `adi.tasks.*` events onto the shared bus; whatever subscribes (event
# triggers) is nobody this crate knows about — it just drops a record.
adi-events = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
# `adi.tasks.*` payloads (the task view, the delete stub) derive their JSON Schema, so the
# event catalog documents exactly what is emitted.
schemars = { workspace = true }

anyhow = "1"

[lints]
workspace = true
