[package]
name = "adi-triggers"
description = "Trigger definitions for the adi platform: named background code blocks fired by an external event source — a webhook call, a Telegram bot, a cron schedule, or a manual fire. Each trigger is one TOML file (kind, shell code block, enabled flag, kind-specific extras) under ~/.adi/mono/triggers. Pure library: the definition/store layer plus the first run slice — firing a trigger spawns its code block detached, with the event payload handed over via ADI_PAYLOAD_FILE and output captured to a per-trigger log."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

serde = { workspace = true }

[lints]
workspace = true
