[package]
name = "adi-update"
description = "Auto-update engine for the adi platform: fetch the release manifest, download and verify the DMG, and atomically swap the installed app bundle."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-config = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
