[package]
name = "adi-webapp-api"
description = "The wire contract and server handlers for the adi webapp: serde DTO types (compiled everywhere, incl. wasm) plus the /api/* logic over adi-ports-manager behind the `server` feature."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
# The native-only server side: the /api handlers over the live port registry and mesh
# config. The wasm frontend depends on this crate WITHOUT this feature, so it pulls in only
# the DTO types (never adi-ports-manager or adi-mesh, which do filesystem I/O / link iroh
# and can't target wasm).
server = [
    "dep:adi-config",
    "dep:adi-ports-manager",
    "dep:adi-mesh",
    "dep:adi-projects",
    "dep:adi-secrets",
    "dep:adi-tasks",
    "dep:adi-tools",
    "dep:adi-agents",
    "dep:adi-triggers",
    # Background triggers are supervised in-process by the app, so the handlers can poke the
    # supervisor when a save changes what should be running.
    "adi-triggers/supervisor",
    "dep:adi-fs",
    "dep:adi-hooks",
    "dep:serde_yaml_ng",
    "dep:toml",
    "dep:uuid",
]

[dependencies]
serde = { workspace = true }

adi-config = { workspace = true, optional = true }
adi-ports-manager = { workspace = true, optional = true }
adi-mesh = { workspace = true, optional = true }
adi-projects = { workspace = true, optional = true }
adi-secrets = { workspace = true, optional = true }
adi-tasks = { workspace = true, optional = true }
adi-tools = { workspace = true, optional = true }
adi-agents = { workspace = true, optional = true }
adi-hooks = { workspace = true, optional = true }
adi-triggers = { workspace = true, optional = true }
adi-fs = { workspace = true, optional = true }
serde_json = { workspace = true }
serde_yaml_ng = { version = "0.10", optional = true }
toml = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[lints]
workspace = true
