[package]
name = "adi-workforce"
description = "WASM-employee agent engine: TS configs compiled to WebAssembly components, driven by a wasmtime host with bundled tools/runners"
version.workspace = true
edition = "2021"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
adi-tasks = { workspace = true }
adi-osext = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# The WASM component host. Pinned to the same major the engine was written
# against — the component-model API shifts between majors.
wasmtime = "29"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"
yaque = "0.6"
tokio = { version = "1", features = ["rt", "time"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
